# RL-balance-robot

./: README.md
applications/RL-PID-horizontal/: Makefile  data.csv
applications/RL-action-map-horizontal/: Makefile
applications/RL-action-map-vertical/: Makefile  data.csv  run
applications/RL-action-map-vertical-0.1nm/: Makefile  data.csv  run
applications/RL-action-map-vertical-PID-ADS1220/: Makefile  data.csv  run
applications/RL-action-map-vertical-small-range/: data.csv  run
applications/RL-action-map-vertical-small-range-ADS1220/: data.csv  run
applications/RL-rknn/: CMakeLists.txt  rknn-build.sh
applications/RL-rknn-vertical/: CMakeLists.txt
applications/RL-rknn-vertical/imu/: mstest
applications/RL-rknn-vertical/install/rknn_test_Linux/: data.csv  nohup.out  rknn_test
applications/RL-rknn-vertical/install/rknn_test_Linux/model/: PPO_fast.rknn
applications/RL-rknn-vertical/model/: PPO.rknn
applications/RL-rknn-vertical/src/: ADS1x15.cpp  main.cpp
applications/sinu/: data.csv  run
applications/test/: data.csv  run
car/: PPO.py  Train.py
horizontal/analysis/: Draw_sim _Ruigang.py  analysis.py  experiment-model.py
horizontal/map/: mapped.py
horizontal/onnx/: PPO.onnx  convert.py  verification.py
horizontal/system calibration/: Identify_Iw_Cw.py  identify_Ib_Cb.py
horizontal/table/: table  table.py  test-outputs.py  (+1 more)
outputs/: Policy_Net_Pytorch(-1,0,1).pth  Policy_Net_Pytorch(-1,0,1)_965.pth  Policy_Net_Pytorch(-1,0,1)_critic.pth  Policy_Net_Pytorch(-1,0,1)_critic_3.pth  Policy_Net_Pytorch(-1,0,1)_critic_965.pth
(+158 files in other folders)
